Changed date and time to luxon versions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </div>
         </nav>
-        <p class="time"></p>
+        <p id="time" class="time"></p>
     </header>
     <div class="table-head">
         <h1 class="title">All awesome books</h1>
@@ -45,9 +45,9 @@
         <h1>Contact Information</h1>
         <p>Do you have any question or you just want to say hello? <br> You can reach out to us!</p>
         <ul class="contact-info">
-            <li>Our email: denscholar2020@gmail.com</li>
-            <li>Our phone number: +234814599598</li>
-            <li>Our address: 7, Sijuwola, close, Aladura, Lagos state, Nigeria</li>
+            <li>Our email: maurovasconcelos11@gmail.com</li>
+            <li>Our phone number: +5547992319191</li>
+            <li>Our address: Lorem Ipsum</li>
         </ul>
     </div>
     <footer>
